--- a/test.html
+++ b/test.html
@@ -2,40 +2,140 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Recommendation Application</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/CSS/style.css">
-    <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="./player.css">
+  <title>Document</title>
+
+
+  <script src="https://connect.soundcloud.com/sdk/sdk-3.3.2.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
 
 </head>
 
+<body>
+  <div class="music-container is-playing">
+    <div class="music-player">
+      <div class="player-content-container">
+        <!-- artist name would go here -->
+        <h1 class="artist-name">Incubus</h1>
 
-<body> 
-    <button id="sign-in-or-out-button"
-          style="margin-left: 25px">Sign In/Authorize</button>
-  <button id="revoke-access-button"
-          style="display: none; margin-left: 25px">Revoke access</button>
 
-  <button id="test">
-        test
-  </button>
-  
-  <div id="auth-status" style="display: inline; padding-left: 25px"></div><hr>
+        <h2 class="album-title">Make Yourself</h2>
+        <h3 class="song-title">"Stellar"</h3>
+        <div class="music-player-controls">
+          <a class="btn-floating btn-large waves-effect cyan" id="playBtn"><i class="material-icons">play_arrow</i></a>
+          <a class="btn-floating btn-large waves-effect cyan hide" id="pauseBtn"><i class="material-icons">pause</i></a>
+          <a id='skip' class="btn-floating btn-large waves-effect cyan" id="fastBtn"><i
+              class="material-icons">fast_forward</i></a>
+          <a class="btn-floating btn-large waves-effect waves-light red" id="favBtn"><i
+              class="material-icons">favorite</i></a>
 
-    <div style="height: 100vh;"> 
-        <iframe id="videoFrame" width="100%" height="auto" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
+    <div class="album">
+      <div class="album-art">
+      <iframe id="videoFrame" width="100%" height="315" src="https://www.youtube.com/embed/Z2YLEPFa750" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <script src="./assets/scripts/music-algorithm.js"></script>
-    <script async defer src="https://apis.google.com/js/api.js"
-        onload="this.onload=function(){};handleClientLoad()"
-        onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script>
+      </div><!--  /.album-art -->
+    </div>
+  </div>
+  </br>
+
+  <!-- add some data-genres to carousel -->
+  <footer>
+    <div class="carousel">
+      <a class="carousel-item" href="#one!"><img src="assets/images/country.jpg"></a>
+      <a class="carousel-item" href="#two!"><img src="assets/images/pop1.jpg"></a>
+      <a class="carousel-item" href="#three!"><img src="assets/images/rap.jpg"></a>
+      <a class="carousel-item" href="#four!"><img src="assets/images/rnb.jpg"></a>
+      <a class="carousel-item" href="#five!"><img src="assets/images/rock.jpeg"></a>
+    </div>
+  </footer>
+  <!-- footer containing cards that will hold genre playlists so the user can click them and then switch to that genre -->
+  <!-- these all hold default images for now, may change them  -->
+  <!-- <footer>
+    <div class="row">  -->
+      <!-- 1st genre -->
+      <!-- <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/rock.jpeg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>  -->
+
+      <!-- 2nd genre -->
+      <!-- <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/rap.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div> -->
+
+      <!-- 3rd genre -->
+      <!-- <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/country.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div> -->
+
+      <!-- 4th genre -->
+      <!-- <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/rnb.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div> -->
+
+      <!-- 5th genre -->
+      <!-- <div class="col md-3 mb-3">
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/pop1.jpg" alt="image of album">
+
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i
+                class="material-icons">play_arrow</i></a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </footer> -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <script src="./assets/scripts/music-algorithm.js"></script>
+  <script async defer src="https://apis.google.com/js/api.js"
+      onload="this.onload=function(){};handleClientLoad()"
+      onreadystatechange="if (this.readyState === 'complete') this.onload()">
+  </script>
+  <script src="./player.js"></script>
 </body>
 
 </html>
